Base html et js qui fonctionne (voir problème affichage score)

--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="javascript.js"></script>
+    <script src="javascript.js" defer></script>
     <title>Document</title>
 </head>
 <body>
+    <h1>Pierre, Feuilles, Ciseaux</h1>
+    <button id='Rock'>Rock</button>
+    <button id='Paper'>Paper</button>
+    <button id='Scissors'>Scissors</button>
+    <h2 class="resultGame" id="resultGame">
+        Please make a choice between the rock, the paper and the scissors
+    </h2>
+    <h3 class="score-message" id="scoreMessage">
+        First to score 5 points wins the game
+    </h3>
+    <div class="scoreGame" id="scoreGame">0/0</div>
+
+
     
 </body>
 </html>
